修改返回类型